[gd_scene load_steps=5 format=3 uid="uid://f1jiurkg7yb2"]

[ext_resource type="Script" uid="uid://vq4ytcivvtxp" path="res://Levels/hud_space_type.gd" id="1_6vduk"]
[ext_resource type="Texture2D" uid="uid://1go71co8soaa" path="res://Assets/kenney_scribble-platformer/PNG/Default/tile_heart.png" id="1_pm7uc"]
[ext_resource type="FontFile" uid="uid://ckjnwdyjcuv2b" path="res://Fonts/PressStart2P-Regular.ttf" id="2_6vduk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_04hlj"]

[node name="HUD-SpaceType" type="CanvasLayer"]
script = ExtResource("1_6vduk")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = 960.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CanvasTexture_04hlj")

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 448.0
offset_right = 1168.0
offset_bottom = 64.0
theme_override_constants/separation = 100

[node name="TextureRect5" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("1_pm7uc")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("1_pm7uc")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("1_pm7uc")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("1_pm7uc")
expand_mode = 2

[node name="TextureRect1" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("1_pm7uc")
expand_mode = 2

[node name="Label" type="Label" parent="."]
offset_right = 448.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_6vduk")
theme_override_font_sizes/font_size = 40
text = "VIDAS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 1280.0
offset_right = 1640.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_6vduk")
theme_override_font_sizes/font_size = 40
text = "PUNTAJE: "
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 1600.0
offset_right = 1920.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_6vduk")
theme_override_font_sizes/font_size = 40
vertical_alignment = 1
